--- a/white.html
+++ b/white.html
@@ -56,7 +56,7 @@
   <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
-      apiKey: "AIzaSyAYoNZsoEIdvpA43yMYIVK7R_dj7uKghqU",
+      apiKey: "",
       authDomain: "dev21chat-5db6d.firebaseapp.com",
       databaseURL: "https://dev21chat-5db6d-default-rtdb.firebaseio.com/",
       projectId: "dev21chat-5db6d",
